changed: odk:generated-by on root changed to odk:xforms-version on model

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.84.1",
+    "version": "1.85.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -44,8 +44,8 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#9d7b28fc",
-        "enketo-transformer": "1.38.0",
+        "enketo-core": "5.13.0",
+        "enketo-transformer": "1.38.1",
         "express": "^4.17.1",
         "grunt": "^1.0.3",
         "grunt-env": "1.0.x",
