changed: changed support email default value

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -23,7 +23,7 @@
         "submissions": false
     },
     "support": {
-        "email": "support@kobotoolbox.org"
+        "email": "support@example.org"
     },
     "widgets": [
         "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea", "url",
