--- a/config/sample.env
+++ b/config/sample.env
@@ -46,7 +46,7 @@
 
 # ENKETO_LOG_SUBMISSIONS=false
 
-# ENKETO_SUPPORT_EMAIL=info@kobotoolbox.org
+# ENKETO_SUPPORT_EMAIL=info@example.org
 
 # ENKETO_ANALYTICS=google
 # ENKETO_GOOGLE_ANALYTICS_UA=
