--- a/config/default-config.json
+++ b/config/default-config.json
@@ -2,6 +2,7 @@
     "app name": "Enketo Smart Paper for KoBoCAT",
     "port": "8005",
     "offline enabled": true,
+    "id length": 8,
     "linked form and data server": {
         "name": "KoBoCAT",
         "server url": "kf.kobotoolbox.org",
