--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
         "core-js": "^3.6.4",
-        "csurf": "1.10.x",
+        "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
         "enketo-core": "github:enketo/enketo-core#08238fcf",
@@ -66,12 +66,12 @@
         "morgan": "1.x.x",
         "node-forge": "^0.7.6",
         "node-sass": "^4.13.1",
-        "papaparse": "4.6.x",
+        "papaparse": "5.2.x",
         "pug": "2.0.4",
-        "puppeteer": "^1.20.0",
-        "redis": "2.8.0",
+        "puppeteer": "^2.1.1",
+        "redis": "^3.0.2",
         "request": "^2.88.2",
-        "rollup": "1.27.x",
+        "rollup": "^2.6.1",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -90,7 +90,7 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
-        "eslint-plugin-jsdoc": "19.2.x",
+        "eslint-plugin-jsdoc": "^23.0.0",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "22.x.x",
@@ -103,20 +103,20 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.3",
-        "karma": "4.4.x",
+        "karma": "5.0.x",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
-        "karma-firefox-launcher": "1.2.x",
+        "karma-firefox-launcher": "1.3.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
         "karma-rollup-preprocessor": "^7.0.3",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
-        "mocha": "^6.2.2",
+        "mocha": "^7.1.1",
         "nock": "^11.9.1",
         "rimraf": "^3.0.2",
-        "sinon": "7.5.x",
-        "sinon-chai": "3.3.x",
+        "sinon": "9.0.x",
+        "sinon-chai": "3.5.x",
         "supertest": "4.0.x"
     },
     "browser": {
