WIP: updating documention for , added to

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -12,6 +12,12 @@
             "allow insecure transport": "false"
         }
     },
+    "IPfiltering" : {
+	    "allowPrivateIPAddress": false,
+	    "allowMetaIPAddress": false,
+	    "allowIPAddressList": "",
+	    "denyIPAddressList": ""
+    },
     "timeout": 300000,
     "expiry for record cache": 30000,
     "encryption key": "s0m3v3rys3cr3tk3y",
