--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
         "karma-sinon-chai": "2.0.x",
         "mocha": "^6.2.2",
         "nock": "^11.7.2",
+        "request-filtering-agent": "^1.0.4",
         "rimraf": "^3.0.1",
         "sinon": "7.5.x",
         "sinon-chai": "3.3.x",
