--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.1.1",
+    "version": "2.2.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -42,7 +42,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#63b3ce8c",
+        "enketo-core": "5.14.3",
         "enketo-transformer": "1.39.0",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
