--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
         "grunt-terser": "1.0.x",
         "i18next": "^19.4.0",
         "i18next-browser-languagedetector": "^4.0.2",
-        "i18next-express-middleware": "^1.9.1",
-        "i18next-node-fs-backend": "2.1.x",
-        "i18next-xhr-backend": "^3.2.2",
+        "i18next-fs-backend": "^1.0.1",
+        "i18next-http-backend": "^1.0.4",
+        "i18next-http-middleware": "^1.0.0",
         "jquery": "^3.4.1",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.2.2",
