Updated tutorial, default-json, changed way tests made requests

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -16,8 +16,8 @@
     "ip filtering" : {
 	    "allowPrivateIPAddress": false,
 	    "allowMetaIPAddress": false,
-	    "allowIPAddressList": "",
-	    "denyIPAddressList": ""
+	    "allowIPAddressList": [],
+	    "denyIPAddressList": []
     },
     "timeout": 300000,
     "expiry for record cache": 30000,
