fixed: textarea not resizing correctly when printing in pages mode changed: updated dependencies

--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
         "bristol": "0.4.x",
         "busboy": "0.3.x",
         "compression": "1.x.x",
-        "cookie-parser": "1.4.x",
-        "core-js": "^3.6.4",
+        "cookie-parser": "^1.4.5",
+        "core-js": "^3.6.5",
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.15.1",
+        "enketo-core": "5.15.2",
         "enketo-transformer": "1.40.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
@@ -52,27 +52,27 @@
         "grunt-sass": "3.1.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "1.0.x",
-        "i18next": "^19.4.0",
-        "i18next-browser-languagedetector": "^4.0.2",
-        "i18next-fs-backend": "^1.0.1",
-        "i18next-http-backend": "^1.0.4",
-        "i18next-http-middleware": "^1.0.0",
-        "jquery": "^3.4.1",
+        "i18next": "^19.4.4",
+        "i18next-browser-languagedetector": "^4.1.1",
+        "i18next-fs-backend": "^1.0.2",
+        "i18next-http-backend": "^1.0.8",
+        "i18next-http-middleware": "^1.0.4",
+        "jquery": "^3.5.1",
         "jstransformer-markdown-it": "^2.1.0",
-        "jszip": "^3.2.2",
+        "jszip": "^3.4.0",
         "jwt-simple": "0.5.x",
         "load-grunt-tasks": "^5.1.0",
         "lodash": "^4.17.15",
-        "morgan": "1.x.x",
+        "morgan": "^1.10.0",
         "node-forge": "^0.7.6",
-        "node-sass": "^4.13.1",
+        "node-sass": "^4.14.1",
         "papaparse": "5.2.x",
         "pug": "2.0.4",
         "puppeteer": "^2.1.1",
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.6.1",
+        "rollup": "^2.7.6",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -91,7 +91,7 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
-        "eslint-plugin-jsdoc": "^23.0.0",
+        "eslint-plugin-jsdoc": "^23.1.0",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "22.x.x",
@@ -100,20 +100,20 @@
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "grunt-simple-nyc": "^3.0.1",
-        "i18next-parser": "1.0.x",
+        "i18next-parser": "^1.0.6",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
-        "jsdoc": "^3.6.3",
-        "karma": "5.0.x",
+        "jsdoc": "^3.6.4",
+        "karma": "^5.0.4",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.3.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
-        "karma-rollup-preprocessor": "^7.0.3",
+        "karma-rollup-preprocessor": "^7.0.5",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
-        "mocha": "^7.1.1",
+        "mocha": "^7.1.2",
         "nock": "^11.9.1",
         "rimraf": "^3.0.2",
         "sinon": "9.0.x",
