--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.3.1",
+    "version": "2.3.2",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -42,7 +42,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#26215827",
+        "enketo-core": "5.15.3",
         "enketo-transformer": "1.40.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
@@ -68,7 +68,7 @@
         "node-sass": "^4.14.1",
         "papaparse": "5.2.x",
         "pug": "2.0.4",
-        "puppeteer": "^2.1.1",
+        "puppeteer": "^3.0.4",
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
@@ -91,12 +91,12 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
-        "eslint-plugin-jsdoc": "^23.1.0",
+        "eslint-plugin-jsdoc": "^25.3.0",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "22.x.x",
         "grunt-jsbeautifier": "0.2.x",
-        "grunt-karma": "3.0.x",
+        "grunt-karma": "^4.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "grunt-simple-nyc": "^3.0.1",
