changed: updated some JSDoc comments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
         "semi": ["error", "always"],
-        "no-console": ["warn", { "allow": ["error", "deprecate"] }],
+        "no-console": ["warn", { "allow": ["error", "deprecate", "warn"] }],
         "eol-last": ["error", "always"],
         "padding-line-between-statements": ["warn", { "blankLine": "always", "prev": "*", "next": "return" }],
         "space-before-function-paren": ["error", "never"],
