--- a/package.json
+++ b/package.json
@@ -88,6 +88,10 @@
         "xml2js": "^0.4.23"
     },
     "devDependencies": {
+        "@babel/cli": "^7.10.1",
+        "@babel/core": "^7.10.1",
+        "@babel/plugin-transform-spread": "^7.10.1",
+        "@babel/preset-env": "^7.10.1",
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
