changed: updated dependencies, and version

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.3.4",
+    "version": "2.3.5",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -56,7 +56,7 @@
         "i18next-browser-languagedetector": "^4.1.1",
         "i18next-fs-backend": "^1.0.2",
         "i18next-http-backend": "^1.0.8",
-        "i18next-http-middleware": "^1.0.4",
+        "i18next-http-middleware": "^2.1.0",
         "jquery": "^3.5.1",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.4.0",
@@ -67,7 +67,7 @@
         "node-forge": "^0.7.6",
         "node-sass": "^4.14.1",
         "papaparse": "5.2.x",
-        "pug": "2.0.4",
+        "pug": "^3.0.0",
         "puppeteer": "^3.0.4",
         "redis": "^3.0.2",
         "request": "^2.88.2",
@@ -91,15 +91,15 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
-        "eslint-plugin-jsdoc": "^25.3.0",
+        "eslint-plugin-jsdoc": "^27.0.4",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
-        "grunt-eslint": "22.x.x",
+        "grunt-eslint": "^23.0.0",
         "grunt-karma": "^4.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "grunt-simple-nyc": "^3.0.1",
-        "i18next-parser": "^1.0.6",
+        "i18next-parser": "^2.0.0",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.4",
@@ -107,13 +107,13 @@
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.3.x",
-        "karma-mocha": "1.3.x",
+        "karma-mocha": "^2.0.1",
         "karma-opera-launcher": "1.0.x",
         "karma-rollup-preprocessor": "^7.0.5",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "^7.1.2",
-        "nock": "^11.9.1",
+        "nock": "^12.0.3",
         "rimraf": "^3.0.2",
         "sinon": "9.0.x",
         "sinon-chai": "3.5.x",
