--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.3.5",
+    "version": "2.3.6",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -31,11 +31,11 @@
     "private": true,
     "license": "Apache-2.0",
     "dependencies": {
-        "aliasify": "2.1.x",
         "@babel/cli": "^7.10.1",
         "@babel/core": "^7.10.1",
         "@babel/plugin-transform-spread": "^7.10.1",
         "@babel/preset-env": "^7.10.1",
+        "aliasify": "2.1.x",
         "basic-auth": "2.0.x",
         "body-parser": "1.x.x",
         "bristol": "0.4.x",
@@ -46,7 +46,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#b51cf52f",
+        "enketo-core": "5.16.2",
         "enketo-transformer": "1.40.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
@@ -56,11 +56,11 @@
         "grunt-sass": "3.1.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "1.0.x",
-        "i18next": "^19.4.4",
-        "i18next-browser-languagedetector": "^4.1.1",
-        "i18next-fs-backend": "^1.0.2",
-        "i18next-http-backend": "^1.0.8",
-        "i18next-http-middleware": "^2.1.0",
+        "i18next": "^19.4.5",
+        "i18next-browser-languagedetector": "^4.2.0",
+        "i18next-fs-backend": "^1.0.6",
+        "i18next-http-backend": "^1.0.15",
+        "i18next-http-middleware": "^2.1.2",
         "jquery": "^3.5.1",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.4.0",
@@ -72,11 +72,11 @@
         "node-sass": "^4.14.1",
         "papaparse": "5.2.x",
         "pug": "^3.0.0",
-        "puppeteer": "^3.0.4",
+        "puppeteer": "^3.3.0",
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.7.6",
+        "rollup": "^2.16.0",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -95,7 +95,7 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
-        "eslint-plugin-jsdoc": "^27.0.4",
+        "eslint-plugin-jsdoc": "^27.0.6",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "^23.0.0",
@@ -107,7 +107,7 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.4",
-        "karma": "^5.0.4",
+        "karma": "^5.1.0",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.3.x",
@@ -116,7 +116,7 @@
         "karma-rollup-preprocessor": "^7.0.5",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
-        "mocha": "^7.1.2",
+        "mocha": "^7.2.0",
         "nock": "^12.0.3",
         "rimraf": "^3.0.2",
         "sinon": "9.0.x",
