changed: speed up loading,
https://github.com/OpenClinica/enketo-express-oc/issues/352

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.3.6",
+    "version": "2.3.7",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -46,7 +46,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#4d306938",
+        "enketo-core": "5.16.3",
         "enketo-transformer": "1.40.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
@@ -66,7 +66,7 @@
         "jszip": "^3.4.0",
         "jwt-simple": "0.5.x",
         "load-grunt-tasks": "^5.1.0",
-        "lodash": "^4.17.15",
+        "lodash": "^4.17.19",
         "morgan": "^1.10.0",
         "node-forge": "^0.7.6",
         "node-sass": "^4.14.1",
