changed: updated enketo-core and enketo-transformer, see changelog,
https://github.com/OpenClinica/enketo-express-oc/issues/349

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#e81db03c",
-        "enketo-transformer": "1.40.1",
+        "enketo-core": "5.16.4",
+        "enketo-transformer": "1.40.2",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.1.0",
@@ -76,7 +76,7 @@
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.16.0",
+        "rollup": "^2.23.0",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -103,10 +103,10 @@
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "grunt-simple-nyc": "^3.0.1",
-        "i18next-parser": "^2.0.0",
+        "i18next-parser": "^2.1.2",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
-        "jsdoc": "^3.6.4",
+        "jsdoc": "^3.6.5",
         "karma": "^5.1.0",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
