changed: updated minor dependencies

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "license": "Apache-2.0",
     "dependencies": {
         "@babel/cli": "^7.10.1",
-        "@babel/core": "^7.11.0",
+        "@babel/core": "^7.11.1",
         "@babel/plugin-transform-spread": "^7.11.0",
         "@babel/preset-env": "^7.11.0",
         "aliasify": "2.1.x",
@@ -59,14 +59,14 @@
         "i18next": "^19.6.3",
         "i18next-browser-languagedetector": "^4.2.0",
         "i18next-fs-backend": "^1.0.6",
-        "i18next-http-backend": "^1.0.15",
+        "i18next-http-backend": "^1.0.18",
         "i18next-http-middleware": "^2.1.2",
         "jquery": "^3.5.1",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.4.0",
         "jwt-simple": "0.5.x",
         "load-grunt-tasks": "^5.1.0",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.20",
         "morgan": "^1.10.0",
         "node-forge": "^0.7.6",
         "node-sass": "^4.14.1",
@@ -76,7 +76,7 @@
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.23.0",
+        "rollup": "^2.26.3",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -103,7 +103,7 @@
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "grunt-simple-nyc": "^3.0.1",
-        "i18next-parser": "^2.1.3",
+        "i18next-parser": "^2.2.0",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.5",
@@ -119,7 +119,7 @@
         "mocha": "^7.2.0",
         "nock": "^12.0.3",
         "rimraf": "^3.0.2",
-        "sinon": "9.0.x",
+        "sinon": "^9.0.3",
         "sinon-chai": "3.5.x",
         "supertest": "4.0.x"
     },
