changed: ordered markdown lists should always be preceded by a newline character because it's very common to number labels in forms,
https://github.com/OpenClinica/enketo-express-oc/issues/349

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.16.7",
-        "enketo-transformer": "1.40.3",
+        "enketo-core": "enketo/enketo-core#e7159f95",
+        "enketo-transformer": "1.41.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.1.0",
