--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.3.12",
+    "version": "2.4.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -42,7 +42,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#77f0f672",
+        "enketo-core": "5.16.9",
         "enketo-transformer": "1.41.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
@@ -55,7 +55,7 @@
         "i18next": "^19.7.0",
         "i18next-browser-languagedetector": "^4.2.0",
         "i18next-fs-backend": "^1.0.6",
-        "i18next-http-backend": "^1.0.18",
+        "i18next-http-backend": "^1.0.21",
         "i18next-http-middleware": "^2.1.2",
         "jquery": "^3.5.1",
         "jstransformer-markdown-it": "^2.1.0",
@@ -72,7 +72,7 @@
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.26.7",
+        "rollup": "^2.28.2",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -102,8 +102,8 @@
         "i18next-parser": "^2.2.0",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
-        "jsdoc": "^3.6.5",
-        "karma": "^5.1.1",
+        "jsdoc": "^3.6.6",
+        "karma": "^5.2.3",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.3.x",
