changed: improved timings of print scripts for Grid Theme forms,
https://github.com/OpenClinica/enketo-express-oc/issues/383

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.16.9",
+        "enketo-core": "enketo/enketo-core#82d8d86c",
         "enketo-transformer": "1.41.1",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
