--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#82d8d86c",
-        "enketo-transformer": "1.41.1",
+        "enketo-core": "5.16.10",
+        "enketo-transformer": "1.41.2",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.3.0",
