fixed: 2 setvalue/xforms-value-changed issues changed: version

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.5.2",
+    "version": "2.5.3",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -41,7 +41,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#634412be",
+        "enketo-core": "5.16.13",
         "enketo-transformer": "1.41.2",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
@@ -71,7 +71,7 @@
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.34.0",
+        "rollup": "^2.35.1",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -114,7 +114,7 @@
         "mocha": "^7.2.0",
         "nock": "^12.0.3",
         "rimraf": "^3.0.2",
-        "sinon": "^9.2.1",
+        "sinon": "^9.2.2",
         "sinon-chai": "3.5.x",
         "supertest": "4.0.x"
     },
