fixed: if the same repeat question has both a setvalue/odk-instance-first-load as well as a setvalue/xforms-value-changed, the output can get messed up,
https://github.com/OpenClinica/enketo-express-oc/issues/413

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.16.14",
-        "enketo-transformer": "1.41.2",
+        "enketo-core": "enketo/enketo-core#7aae69f5",
+        "enketo-transformer": "1.41.3",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.3.0",
