--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "2.5.6",
+    "version": "2.6.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -41,7 +41,7 @@
         "csurf": "1.11.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "enketo/enketo-core#c451d449",
+        "enketo-core": "5.17.0",
         "enketo-transformer": "1.41.3",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
