--- a/package.json
+++ b/package.json
@@ -51,27 +51,27 @@
         "grunt-sass": "3.1.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "1.0.x",
-        "i18next": "^19.8.7",
+        "i18next": "^19.9.1",
         "i18next-browser-languagedetector": "^4.2.0",
-        "i18next-fs-backend": "^1.0.8",
-        "i18next-http-backend": "^1.1.0",
+        "i18next-fs-backend": "^1.1.0",
+        "i18next-http-backend": "^1.1.1",
         "i18next-http-middleware": "^2.1.2",
-        "jquery": "^3.5.1",
+        "jquery": "^3.6.0",
         "jstransformer-markdown-it": "^2.1.0",
-        "jszip": "^3.4.0",
+        "jszip": "^3.6.0",
         "jwt-simple": "0.5.x",
         "load-grunt-tasks": "^5.1.0",
-        "lodash": "^4.17.20",
+        "lodash": "^4.17.21",
         "morgan": "^1.10.0",
         "node-forge": "^0.10.0",
         "node-sass": "^4.14.1",
         "papaparse": "5.2.x",
-        "pug": "^3.0.0",
+        "pug": "^3.0.2",
         "puppeteer": "^3.3.0",
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.4",
-        "rollup": "^2.38.4",
+        "rollup": "^2.40.0",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -82,7 +82,7 @@
         "serve-favicon": "2.x.x",
         "time-grunt": "2.x.x",
         "valid-url": "^1.0.9",
-        "vex-dialog-enketo": "enketo/vex-dialog-enketo#b6e0f01",
+        "vex-dialog-enketo": "github:enketo/vex-dialog-enketo#b6e0f01",
         "vex-js": "4.1.x",
         "xml2js": "^0.4.23"
     },
@@ -90,7 +90,7 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.2.0",
-        "eslint-plugin-jsdoc": "^27.0.6",
+        "eslint-plugin-jsdoc": "^32.2.0",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "^23.0.0",
@@ -105,10 +105,10 @@
         "karma": "^5.2.3",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
-        "karma-firefox-launcher": "1.3.x",
+        "karma-firefox-launcher": "^2.1.0",
         "karma-mocha": "^2.0.1",
         "karma-opera-launcher": "1.0.x",
-        "karma-rollup-preprocessor": "^7.0.5",
+        "karma-rollup-preprocessor": "^7.0.6",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "^7.2.0",
@@ -116,7 +116,7 @@
         "rimraf": "^3.0.2",
         "sinon": "^9.2.4",
         "sinon-chai": "3.5.x",
-        "supertest": "4.0.x"
+        "supertest": "^6.1.3"
     },
     "browser": {
         "enketo/config": "./public/js/src/module/client-config",
