--- a/package.json
+++ b/package.json
@@ -31,91 +31,91 @@
     "private": true,
     "license": "Apache-2.0",
     "dependencies": {
-        "aliasify": "2.1.x",
-        "basic-auth": "2.0.x",
-        "body-parser": "1.x.x",
-        "bristol": "0.4.x",
-        "busboy": "0.3.x",
-        "compression": "1.x.x",
+        "aliasify": "^2.1.0",
+        "basic-auth": "^2.0.1",
+        "body-parser": "^1.19.0",
+        "bristol": "^0.4.0",
+        "busboy": "^0.3.1",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.5",
-        "csurf": "1.11.x",
-        "db.js": "0.15.0",
-        "debug": "4.1.x",
+        "csurf": "^1.11.0",
+        "db.js": "^0.15.0",
+        "debug": "^4.3.1",
         "enketo-core": "5.17.2",
         "enketo-transformer": "1.41.6",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.3.0",
-        "grunt-env": "1.0.x",
-        "grunt-i18next": "0.2.x",
-        "grunt-sass": "3.1.x",
-        "grunt-shell-spawn": "0.4.x",
-        "grunt-terser": "1.0.x",
+        "grunt-env": "^1.0.1",
+        "grunt-i18next": "^0.2.0",
+        "grunt-sass": "^3.1.0",
+        "grunt-shell-spawn": "^0.4.0",
+        "grunt-terser": "^1.0.0",
         "i18next": "^19.9.1",
-        "i18next-browser-languagedetector": "^4.2.0",
+        "i18next-browser-languagedetector": "^6.0.1",
         "i18next-fs-backend": "^1.1.0",
         "i18next-http-backend": "^1.1.1",
-        "i18next-http-middleware": "^2.1.2",
+        "i18next-http-middleware": "^3.1.0",
         "jquery": "^3.6.0",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.6.0",
-        "jwt-simple": "0.5.x",
+        "jwt-simple": "^0.5.6",
         "load-grunt-tasks": "^5.1.0",
         "lodash": "^4.17.21",
         "morgan": "^1.10.0",
         "node-forge": "^0.10.0",
-        "node-sass": "^4.14.1",
-        "papaparse": "5.2.x",
+        "node-sass": "^5.0.0",
+        "papaparse": "^5.3.0",
         "pug": "^3.0.2",
-        "puppeteer": "^3.3.0",
+        "puppeteer": "^8.0.0",
         "redis": "^3.0.2",
         "request": "^2.88.2",
-        "request-filtering-agent": "^1.0.4",
+        "request-filtering-agent": "^1.0.5",
         "rollup": "^2.40.0",
-        "rollup-plugin-alias": "2.2.x",
-        "rollup-plugin-commonjs": "10.1.x",
+        "rollup-plugin-alias": "^2.2.0",
+        "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-istanbul": "^2.0.1",
-        "rollup-plugin-json": "4.x.x",
+        "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-node-builtins": "^2.1.2",
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-node-resolve": "5.2.x",
-        "serve-favicon": "2.x.x",
-        "time-grunt": "2.x.x",
+        "serve-favicon": "^2.5.0",
+        "time-grunt": "^2.0.0",
         "valid-url": "^1.0.9",
         "vex-dialog-enketo": "github:enketo/vex-dialog-enketo#b6e0f01",
-        "vex-js": "4.1.x",
+        "vex-js": "^4.1.0",
         "xml2js": "^0.4.23"
     },
     "devDependencies": {
-        "chai": "4.2.x",
-        "chai-as-promised": "*",
+        "chai": "^4.3.1",
+        "chai-as-promised": "^7.1.1",
         "docdash": "^1.2.0",
         "eslint-plugin-jsdoc": "^32.2.0",
-        "grunt-concurrent": "3.x.x",
-        "grunt-contrib-watch": "1.1.x",
+        "grunt-concurrent": "^3.0.0",
+        "grunt-contrib-watch": "^1.1.0",
         "grunt-eslint": "^23.0.0",
-        "grunt-karma": "^4.0.x",
-        "grunt-mocha-test": "0.13.x",
-        "grunt-nodemon": "0.4.x",
+        "grunt-karma": "^4.0.0",
+        "grunt-mocha-test": "^0.13.3",
+        "grunt-nodemon": "^0.4.2",
         "grunt-simple-nyc": "^3.0.1",
         "i18next-parser": "^2.2.0",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.6",
-        "karma": "^5.2.3",
-        "karma-chrome-launcher": "3.1.x",
+        "karma": "^6.1.1",
+        "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "^2.1.0",
         "karma-mocha": "^2.0.1",
-        "karma-opera-launcher": "1.0.x",
+        "karma-opera-launcher": "^1.0.0",
         "karma-rollup-preprocessor": "^7.0.6",
-        "karma-safari-launcher": "1.0.x",
-        "karma-sinon-chai": "2.0.x",
-        "mocha": "^7.2.0",
-        "nock": "^12.0.3",
+        "karma-safari-launcher": "^1.0.0",
+        "karma-sinon-chai": "^2.0.2",
+        "mocha": "^8.3.0",
+        "nock": "^13.0.10",
         "rimraf": "^3.0.2",
         "sinon": "^9.2.4",
-        "sinon-chai": "3.5.x",
+        "sinon-chai": "^3.5.0",
         "supertest": "^6.1.3"
     },
     "browser": {
