changed: update node and npm versions, #240

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "version": "2.6.2",
     "main": "./app.js",
     "engines": {
-        "node": "4.4.x",
-        "npm": "2.14.x"
+        "node": ">=12",
+        "npm": ">=6 <7"
     },
     "repository": {
         "type": "git",
