--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
         "public/js/src/enketo-webform-view.js",
         "public/js/src/enketo-offline-fallback.js"
     ],
+    "//": "While CI runs Node v12.21.0, v12.18.4 is currently the latest version which is able to run the full test suite without crashing",
     "volta": {
         "node": "12.18.4"
     }
