(Temporarily?) switch back to "upstart" from "systemd"
According to [Systemd for Upstart users](https://wiki.ubuntu.com/SystemdForUpstartUsers), this change should enable us to continue using the existing Upstart script to start Redis. If my hunch about Chrome version is correcct, the Xenial upgrade is necessary, but I feel that switching to Systemd is out of scope for this PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "12"
 dist: xenial
 before_script:
+  - sudo apt-get install upstart-sysv
+  - sudo update-initramfs -u
   - npm install -g grunt-cli
   - chmod 777 ./setup/travis/travis-redis.sh
   - ./setup/travis/travis-redis.sh
