Roll back travis.yml changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: node_js
 sudo: true
 node_js:
   - "12"
-dist: xenial
+dist: trusty
 before_script:
-  - sudo systemctl stop redis-server
-  - sudo apt-get install upstart-sysv
-  - sudo update-initramfs -u
-  - sudo systemctl start redis-server
   - npm install -g grunt-cli
   - chmod 777 ./setup/travis/travis-redis.sh
   - ./setup/travis/travis-redis.sh
