--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.1",
-        "enketo-core": "enketo/enketo-core#c35aaba0",
-        "enketo-transformer": "1.42.0",
+        "enketo-core": "5.18.0",
+        "enketo-transformer": "1.43.0",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.3.0",
