--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     },
     "extends": "eslint:recommended",
     "plugins": [
-        "jsdoc"
+        "jsdoc",
+        "unicorn"
     ],
     "parserOptions": {
         "sourceType": "module",
@@ -53,7 +54,8 @@
         "jsdoc/require-returns-check": 1,
         "jsdoc/require-returns-description": 1,
         "jsdoc/require-returns-type": 1,
-        "jsdoc/valid-types": 1
+        "jsdoc/valid-types": 1,
+        "unicorn/expiring-todo-comments": "error"
     }
 }
 
