--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "karma-sinon-chai": "^2.0.2",
         "mocha": "^8.4.0",
         "nock": "^13.1.0",
+        "object.fromentries": "^2.0.4",
         "rimraf": "^3.0.2",
         "sinon": "^9.2.4",
         "sinon-chai": "^3.7.0",
