--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "node-forge": "^0.10.0",
         "node-sass": "^5.0.0",
         "papaparse": "^5.3.1",
+        "pkg-dir": "^5.0.0",
         "pug": "^3.0.2",
         "puppeteer": "^8.0.0",
         "redis": "^3.1.2",
