Support for jr:instance/last-saved endpoint (#269)
* Pin Node version with Volta

* Initial form-cache implementation of get/set last-saved

* Don't set last saved records when encrypted

* Expose `save` function from records-queue

This replaces the dynamic function call in controller-webform, making it a little easier to find the call site. If at some point in the future we migrate to TypeScript this would be somewhat less necessary.

Another option, discussed with @lognaturel, would be to remove this logic from controller-webform and have records-queue determine which is appropriate. I agree this would be an improvement, but I think that's probably out of scope for the last-saved work.

* Implement/test offline support for last-saved…

This includes a refactor of the encryption exception, ensuring Surveys with encryption enabled do not store unencrypted draft Records. This refactor was accomplished by persisting encryption-enabled state on the Survey itself.

* Support online mode, populate last-saved secondary instances

* Correct typo

* Initial changes for feedback on PR #269

- Corrected assignment to `binaryDefaults`
- Corrected a typo
- Removed references to last-saved where no longer relevant

* Move tests related to last-saved to test/client/feature/last-saved.spec.js

* Move tests related to encryption-enabled surveys/last-saved records to test/client/feature/survey-encryption.spec.js

* Document fallback to a survey's model when it has no last-saved record

* Add AbortController polyfill for old Chrome version in CI

* Don't store last saved records for surveys without a last-saved secondary instance

* Polyfill Object.fromEntries...

* Blob.text -> Response.text to hopefully address CI failure

* Fix overwrite of lastSavedRecord on first online submit, edit regression

* Move remaining last-saved tests to the feature

* Fix `npm run build-docs`

* Use, and fix, getDisplayableRecordList

--- a/package.json
+++ b/package.json
@@ -87,10 +87,12 @@
         "xml2js": "^0.4.23"
     },
     "devDependencies": {
+        "abortcontroller-polyfill": "^1.7.3",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "docdash": "^1.2.0",
         "eslint-plugin-jsdoc": "^32.3.4",
+        "eslint-plugin-unicorn": "^33.0.1",
         "grunt-concurrent": "^3.0.0",
         "grunt-contrib-watch": "^1.1.0",
         "grunt-eslint": "^23.0.0",
@@ -102,6 +104,7 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.7",
+        "jsdoc-ts-utils": "^2.0.0",
         "karma": "^6.3.3",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^1.1.2",
@@ -113,6 +116,7 @@
         "karma-sinon-chai": "^2.0.2",
         "mocha": "^8.4.0",
         "nock": "^13.1.0",
+        "object.fromentries": "^2.0.4",
         "rimraf": "^3.0.2",
         "sinon": "^9.2.4",
         "sinon-chai": "^3.7.0",
@@ -130,5 +134,9 @@
         "public/js/src/enketo-webform-edit.js",
         "public/js/src/enketo-webform-view.js",
         "public/js/src/enketo-offline-fallback.js"
-    ]
+    ],
+    "//": "While CI runs Node v12.21.0, v12.18.4 is currently the latest version which is able to run the full test suite without crashing",
+    "volta": {
+        "node": "12.18.4"
+    }
 }
