Speed up test runs by switching from Rollup to esbuild

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "docdash": "^1.2.0",
+        "esbuild": "^0.12.13",
         "eslint-plugin-jsdoc": "^35.4.3",
         "eslint-plugin-unicorn": "^34.0.1",
         "grunt-concurrent": "^3.0.0",
@@ -109,6 +110,7 @@
         "karma": "^6.3.4",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^1.1.2",
+        "karma-esbuild": "^2.2.0",
         "karma-firefox-launcher": "^2.1.1",
         "karma-mocha": "^2.0.1",
         "karma-opera-launcher": "^1.0.0",
