--- a/setup/travis/redis-enketo-cache.service
+++ b/setup/travis/redis-enketo-cache.service
@@ -11,13 +11,10 @@ ExecStart=/usr/bin/redis-server /etc/redis/redis-enketo-cache.conf
 PIDFile=/var/run/redis/redis-enketo-cache.pid
 TimeoutStopSec=0
 Restart=always
-User=travis
+User=redis
+Group=redis
 
-ExecStartPre=-/bin/run-parts --verbose /etc/redis/redis-server.pre-up.d
-ExecStartPost=-/bin/run-parts --verbose /etc/redis/redis-server.post-up.d
-ExecStop=-/bin/run-parts --verbose /etc/redis/redis-server.pre-down.d
 ExecStop=/bin/kill -s TERM $MAINPID
-ExecStopPost=-/bin/run-parts --verbose /etc/redis/redis-server.post-down.d
 
 PrivateTmp=yes
 PrivateDevices=yes
