--- a/setup/travis/redis-enketo-main.service
+++ b/setup/travis/redis-enketo-main.service
@@ -1,12 +1,12 @@
 # Based on https://learn.jetrails.com/article/multiple-redis-servers-with-systemd
 
 [Unit]
-Description=Redis key-value store
+Description=Redis main
 After=network.target
 Documentation=http://redis.io/documentation, man:redis-server(1)
 
 [Service]
-Type=simple
+Type=exec
 ExecStart=/usr/bin/redis-server /etc/redis/redis-enketo-main.conf
 PIDFile=/var/run/redis/redis-enketo-main.pid
 TimeoutStopSec=0
