It looks Like type=notify may actually be it
See https://serverfault.com/a/893075

--- a/setup/travis/redis-enketo-main.service
+++ b/setup/travis/redis-enketo-main.service
@@ -6,7 +6,7 @@ After=network.target
 Documentation=http://redis.io/documentation, man:redis-server(1)
 
 [Service]
-Type=exec
+Type=notify
 ExecStart=/usr/bin/redis-server /etc/redis/redis-enketo-main.conf
 PIDFile=/var/run/redis/redis-enketo-main.pid
 TimeoutStopSec=0
