Move travis-redis.sh call before install
It doesn't depend on the install, and can help speed up iterations

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ sudo: true
 node_js:
   - "12"
 dist: focal
-before_script:
-  - npm install -g grunt-cli
+before_install:
   - chmod 777 ./setup/travis/travis-redis.sh
   - ./setup/travis/travis-redis.sh
+before_script:
+  - npm install -g grunt-cli
   - grunt css
 addons:
   chrome: stable
