--- a/setup/travis/redis-enketo-cache.service
+++ b/setup/travis/redis-enketo-cache.service
@@ -7,6 +7,7 @@ Documentation=http://redis.io/documentation, man:redis-server(1)
 
 [Service]
 Type=notify
+NotifyAccess=all
 ExecStart=/usr/bin/redis-server /etc/redis/redis-enketo-cache.conf
 PIDFile=/var/run/redis/redis-enketo-cache.pid
 TimeoutStopSec=0
