--- a/setup/travis/redis-enketo-cache.service
+++ b/setup/travis/redis-enketo-cache.service
@@ -6,12 +6,9 @@ After=network.target
 Documentation=http://redis.io/documentation, man:redis-server(1)
 
 [Service]
-Type=notify
+Type=forking
 NotifyAccess=all
 ExecStart=/usr/bin/redis-server /etc/redis/redis-enketo-cache.conf
-ReadWriteDirectories=-/var/lib/redis
-ReadWriteDirectories=-/var/log/redis
-ReadWriteDirectories=-/var/run/redis
 PIDFile=/var/run/redis/redis-enketo-cache.pid
 TimeoutStopSec=0
 Restart=always
@@ -24,6 +21,9 @@ PrivateTmp=yes
 PrivateDevices=yes
 ProtectHome=yes
 ReadOnlyDirectories=/
+ReadWriteDirectories=-/var/lib/redis
+ReadWriteDirectories=-/var/log/redis
+ReadWriteDirectories=-/var/run/redis
 CapabilityBoundingSet=~CAP_SYS_PTRACE
 
 # redis-server writes its own config file when in cluster mode so we allow
