Turns out the Vagrant setup already uses systemd, let's learn from that

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_script:
 addons:
   chrome: stable
 services:
-  - redis-server
+  - redis
 notifications:
     flowdock: 7d2ea551a0757bea5b52c496f3a7ab2e
