--- a/setup/redis/systemd/redis-enketo-cache.service
+++ b/setup/redis/systemd/redis-enketo-cache.service
@@ -1,7 +1,5 @@
 [Unit]
-Description=Redis
-After=network.target
-PartOf=redis.target
+Description=Redis cache
 
 [Service]
 Type=simple
@@ -13,4 +11,4 @@ ExecStart=/usr/bin/redis-server /etc/redis/enketo-cache.conf
 Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target redis.target
+WantedBy=multi-user.target
