Ugh this should be parameterized so inconsistent changes don't keep happening

--- a/setup/redis/systemd/redis-enketo-main.service
+++ b/setup/redis/systemd/redis-enketo-main.service
@@ -11,4 +11,4 @@ ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf
 Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target redis.target
+WantedBy=multi-user.target
