--- a/setup/redis/systemd/redis-enketo-main.service
+++ b/setup/redis/systemd/redis-enketo-main.service
@@ -2,7 +2,7 @@
 Description=Redis main
 
 [Service]
-Type=simple
+Type=notify
 User=redis
 Group=redis
 PrivateTmp=true
@@ -10,6 +10,7 @@ PIDFile=/var/run/redis/enketo-main.pid
 ExecStartPre=echo "Starting Redis main"
 ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf
 ExecStartPost=redis-cli -p 6379 ping
+ExecStop=/usr/bin/redis-cli -p 6379 shutdown
 Restart=on-failure
 
 [Install]
