--- a/setup/redis/systemd/redis-enketo-main.service
+++ b/setup/redis/systemd/redis-enketo-main.service
@@ -2,16 +2,16 @@
 Description=Redis main
 
 [Service]
-Type=notify
+Type=forking
 User=redis
 Group=redis
 PrivateTmp=true
 PIDFile=/var/run/redis/enketo-main.pid
 ExecStartPre=echo "Starting Redis main"
-ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf
+ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf --supervised no
 ExecStartPost=redis-cli -p 6379 ping
 ExecStop=/usr/bin/redis-cli -p 6379 shutdown
-Restart=on-failure
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
