--- a/setup/redis/systemd/redis-enketo-main.service
+++ b/setup/redis/systemd/redis-enketo-main.service
@@ -1,17 +1,48 @@
 [Unit]
 Description=Redis main
+After=network.target
+Documentation=http://redis.io/documentation, man:redis-server(1)
 
 [Service]
 Type=forking
 User=redis
 Group=redis
-PrivateTmp=true
 PIDFile=/var/run/redis/enketo-main.pid
 ExecStartPre=echo "Starting Redis main"
 ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf --supervised no
-ExecStartPost=redis-cli -p 6379 ping
-ExecStop=/usr/bin/redis-cli -p 6379 shutdown
+ExecStartPost=redis-cli -p 6380 ping
+ExecStop=/bin/kill -s TERM $MAINPID
+TimeoutStopSec=0
 Restart=always
+RuntimeDirectory=redis
+RuntimeDirectoryMode=2755
+
+UMask=007
+PrivateTmp=yes
+LimitNOFILE=65535
+PrivateDevices=yes
+ProtectHome=yes
+ReadOnlyDirectories=/
+ReadWriteDirectories=-/var/lib/redis
+ReadWriteDirectories=-/var/log/redis
+ReadWriteDirectories=-/var/run/redis
+
+NoNewPrivileges=true
+CapabilityBoundingSet=CAP_SETGID CAP_SETUID CAP_SYS_RESOURCE
+RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX
+MemoryDenyWriteExecute=true
+ProtectKernelModules=true
+ProtectKernelTunables=true
+ProtectControlGroups=true
+RestrictRealtime=true
+RestrictNamespaces=true
+
+# redis-server can write to its own config file when in cluster mode so we
+# permit writing there by default. If you are not using this feature, it is
+# recommended that you replace the following lines with "ProtectSystem=full".
+ProtectSystem=true
+ReadWriteDirectories=-/etc/redis
 
 [Install]
 WantedBy=multi-user.target
+Alias=redis-enketo-main.service
