I know that these are set but... geez, maybe `supervised` in the config is overriding?

--- a/setup/redis/systemd/redis-enketo-cache.service
+++ b/setup/redis/systemd/redis-enketo-cache.service
@@ -9,7 +9,7 @@ User=redis
 Group=redis
 PIDFile=/var/run/redis/enketo-cache.pid
 ExecStartPre=echo "Starting Redis cache"
-ExecStart=/usr/bin/redis-server /etc/redis/enketo-cache.conf --supervised no
+ExecStart=/usr/bin/redis-server /etc/redis/enketo-cache.conf --supervised no --daemonize yes
 ExecStartPost=redis-cli -p 6380 ping
 ExecStop=/bin/kill -s TERM $MAINPID
 TimeoutStopSec=0
