--- a/setup/redis/systemd/redis-enketo-main.service
+++ b/setup/redis/systemd/redis-enketo-main.service
@@ -9,7 +9,7 @@ User=redis
 Group=redis
 PIDFile=/var/run/redis/enketo-main.pid
 ExecStartPre=echo "Starting Redis main"
-ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf --supervised no
+ExecStart=/usr/bin/redis-server /etc/redis/enketo-main.conf --supervised no --daemonize yes
 ExecStartPost=redis-cli -p 6380 ping
 ExecStop=/bin/kill -s TERM $MAINPID
 TimeoutStopSec=0
