--- a/setup/redis/systemd/redis-enketo-main.service
+++ b/setup/redis/systemd/redis-enketo-main.service
@@ -4,7 +4,7 @@ After=network.target
 Documentation=http://redis.io/documentation, man:redis-server(1)
 
 [Service]
-Type=forking
+Type=simple
 User=redis
 Group=redis
 PIDFile=/var/run/redis/enketo-main.pid
