--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.1",
-        "enketo-core": "5.17.6",
+        "enketo-core": "github:eyelidlessness/enketo-core#fix/issue-804-nested-repeat-relevance",
         "enketo-transformer": "1.42.0",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
